--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node .\\app.js"
   },
   "dependencies": {
+    "chalk": "^4.0.0",
     "commander": "^5.0.0",
+    "express": "^4.17.1",
     "puppeteer": "^3.0.1"
   }
 }
