--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node .\\app.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "chalk": "^4.0.0",
     "commander": "^5.0.0",
     "express": "^4.17.1",
