--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^4.0.0",
     "commander": "^5.0.0",
     "express": "^4.17.1",
+    "object-sizeof": "^1.6.0",
     "puppeteer": "^3.0.1"
   }
 }
