update from master

--- a/test.ini
+++ b/test.ini
@@ -1,2 +1,27 @@
-airchina,LAX,PEK,2020-05-05
-airchina,PEK,PVG,2020-05-05
+airchina,LAX,PEK,2020-05-03
+airchina,LAX,PEK,2020-05-10
+airchina,LAX,PEK,2020-05-17
+airchina,LAX,PEK,2020-05-24
+airchina,LAX,PEK,2020-05-31
+airchina,LHR,PEK,2020-05-01
+airchina,LHR,PEK,2020-05-08
+airchina,LHR,PEK,2020-05-15
+airchina,LHR,PEK,2020-05-22
+airchina,LHR,PEK,2020-05-29
+airchina,YVR,PEK,2020-05-03
+airchina,YVR,PEK,2020-05-10
+airchina,YVR,PEK,2020-05-17
+airchina,YVR,PEK,2020-05-24
+airchina,FRA,CTU,2020-05-02
+airchina,FRA,CTU,2020-05-09
+airchina,FRA,CTU,2020-05-16
+airchina,FRA,CTU,2020-05-23
+airchina,ICN,PEK,2020-05-01
+airchina,ICN,PEK,2020-05-08
+airchina,ICN,PEK,2020-05-15
+airchina,ICN,PEK,2020-05-22
+airchina,ICN,PEK,2020-05-29
+airchina,CDG,PEK,2020-05-06
+airchina,CDG,PEK,2020-05-13
+airchina,CDG,PEK,2020-05-20
+airchina,CDG,PEK,2020-05-27
